fixing minors bugs + adjust the app to hebrew

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,97 @@
     <string name="password">Password</string>
     <string name="scan">Scan</string>
     <string name="home_page">home page</string>
+    <string name="sign_in">Sign in</string>
+    <string name="logout">Logout</string>
+    <string name="hit_newsletter">HIT Newsletter</string>
+    <string name="start_navigation">Start Navigation</string>
+    <string name="admin_manager">Admin Manager</string>
+    <string name="hit_logo">HIT Logo</string>
+    <string name="out_of_bounds_can_t_show_current_location">Out of bounds , can\'t show current location</string>
+    <string name="back">Back</string>
+    <string name="choose_from_list">Choose from list</string>
+    <string name="choose_from_map">Choose from map</string>
+    <string name="select_image">Please select an image</string>
+    <string name="name">Name</string>
+    <string name="coordinates">Coordinates</string>
+    <string name="azimuth">Azimuth</string>
+    <string name="low_accuracy_please_wait">Low accuracy, Please wait...</string>
+    <string name="you_have_arrived">You have arrived!</string>
+    <string name="exit">Exit</string>
+    <string name="nevigate_again">Nevigate Again</string>
+    <string name="delete_location_msg">Location deleted successfully</string>
+    <string name="km">%.1f Km</string>
+    <string name="meters">%d meters</string>
+    <string name="morning_msg">Good Morning,                  Sign In or Create Account</string>
+    <string name="afternoon_msg">Good Afternoon,                  Sign In or Create Account</string>
+    <string name="evening_msg">Good Evening,                  Sign In or Create Account</string>
+    <string name="no_locations_available">Location data is not available</string>
+    <string name="location_found">Location found</string>
+    <string name="no_location_found">Location not found</string>
+    <string name="accuracy">Accuracy</string>
+    <string name="confirm_logout">Confirm Logout</string>
+    <string name="logout_msg_text">Are you sure you want to logout?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="confirm_exit">Confirm Exit</string>
+    <string name="exit_msg_text">Are you sure you want to exit?</string>
+    <string name="location_permission_msg">Location permission granted</string>
+    <string name="registration_success">Registration Success</string>
+    <string name="pick_an_image">Pick an image</string>
+    <string name="enter_place_name">Enter place name</string>
+    <string name="save_data">Save data</string>
+    <string name="view_list">View List</string>
+    <string name="search">Search</string>
+    <string name="are_you_sure_you_want_to_delete_this_location">Are you sure you want to delete this location?</string>
+    <string name="description">Description</string>
+    <string name="location_image">location image</string>
+    <string name="invalid_email_or_password_please_try_again">*Invalid email or password, please try again</string>
+    <string name="email">Email</string>
+    <string name="dont_have_an_account">Dont have an account?</string>
+    <string name="invalid_email_or_password_please_use_an_existing_email_and_a_password_of_at_least_6_characters">*Invalid email or password, please use an existing email and a password of at least 6 characters</string>
+    <string name="passwords_do_not_match">*Passwords do not match</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="fichman_gate">Fichman Gate</string>
+    <string name="hoffin_gate">Hoffin Gate</string>
+    <string name="golomb_gate">Golomb Gate</string>
+    <string name="building_1">Building 1</string>
+    <string name="building_2">Building 2</string>
+    <string name="building_3_A">Building 3-A</string>
+    <string name="building_3_B">Building 3-B</string>
+    <string name="building_4_workshop">Building 4-Workshop</string>
+    <string name="building_5">Building 5</string>
+    <string name="building_6">Building 6</string>
+    <string name="building_7">Building 7</string>
+    <string name="building_8_A">Building 8-A</string>
+    <string name="building_8_B">Building 8-B</string>
+    <string name="building_8_C">Building 8-C</string>
+    <string name="aguda">Aguda</string>
+    <string name="cafeteria">Cafeteria</string>
+    <string name="library">Library</string>
+    <string name="club">Club</string>
+    <string name="materials_shop">Materials Shop</string>
+    <string name="dorms">Dorms</string>
+    <string name="dorms_gate">Dorms Gate</string>
+    <string name="unknown_location">Unknown Location</string>
+
+    <string name="club_desc">A student\'s club in building 6</string>
+    <string name="aguda_desc">The student\'s union in building 5</string>
+    <string name="building_8_a_desc">The first entrance to building 8</string>
+    <string name="building_8_b_desc">The second entrance to building 8</string>
+    <string name="building_8_c_desc">The third entrance to building 8</string>
+    <string name="building_3_a_desc">The first entrance to building 3</string>
+    <string name="building_3_b_desc">The second entrance to building 3</string>
+    <string name="dorms_desc">Student\'s dorms near the parking lot and building 7</string>
+    <string name="dorms_gate_desc">The closest gate to the dorms</string>
+    <string name="library_desc">Top floor of building 5</string>
+    <string name="fichman_gate_desc">The main entrance to HIT , in front of building 5</string>
+    <string name="store_desc">A store near building 6 (floor -1)</string>
+    <string name="hoffin_gate_desc">A gate near building 8 and a parking lot</string>
+    <string name="golomb_gate_desc">The rear gate of Hit , near building 1 and 2</string>
+    <string name="building_5_desc">The main building in HIT</string>
+    <string name="no_desc">No description</string>
+
+
+
 </resources>
