--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,21 +89,27 @@
     <string name="dorms_gate">Dorms Gate</string>
     <string name="unknown_location">Unknown Location</string>
 
+    <string name="cafeteria_desc">Cafeteria</string>
     <string name="club_desc">A student\'s club in building 6</string>
     <string name="aguda_desc">The student\'s union in building 5</string>
-    <string name="building_8_a_desc">The first entrance to building 8</string>
-    <string name="building_8_b_desc">The second entrance to building 8</string>
-    <string name="building_8_c_desc">The third entrance to building 8</string>
-    <string name="building_3_a_desc">The first entrance to building 3</string>
-    <string name="building_3_b_desc">The second entrance to building 3</string>
+    <string name="building_8_a_desc">The first entrance to building 8. Faculty of Science. Department of Computer Science. Department of Applied Mathematics. Auditorium </string>
+    <string name="building_8_b_desc">The second entrance to building 8. Faculty of Science. Department of Computer Science. Department of Applied Mathematics. Auditorium </string>
+    <string name="building_8_c_desc">The third entrance to building 8. Faculty of Science. Department of Computer Science. Department of Applied Mathematics. Auditorium </string>
+    <string name="building_3_a_desc">The first entrance to building 3. Computer center. Administration building. Assembly Hall. Communication engineering laboratories.</string>
+    <string name="building_3_b_desc">The second entrance to building 3. Computer center. Administration building. Assembly Hall. Communication engineering laboratories.</string>
     <string name="dorms_desc">Student\'s dorms near the parking lot and building 7</string>
     <string name="dorms_gate_desc">The closest gate to the dorms</string>
     <string name="library_desc">Top floor of building 5</string>
     <string name="fichman_gate_desc">The main entrance to HIT , in front of building 5</string>
     <string name="store_desc">A store near building 6 (floor -1)</string>
     <string name="hoffin_gate_desc">A gate near building 8 and a parking lot</string>
+    <string name="building_1_desc">The Faculty of Industrial Engineering and Technology Management. The Center for Student Advancement. Logistics center. Classrooms and laboratories.</string>
+    <string name="building_2_desc">Radio FM 106. Classrooms.</string>
     <string name="golomb_gate_desc">The rear gate of Hit , near building 1 and 2</string>
-    <string name="building_5_desc">The main building in HIT</string>
+    <string name="building_6_desc">The Faculty of Design. Auditorium.</string>
+    <string name="building_7_desc">The Faculty of Design. Design workshops.</string>
+    <string name="building_4_workshop_desc">Painting workshops. Sculpture workshops</string>
+    <string name="building_5_desc">The main building in HIT. Faculty of Engineering. The Faculty of Learning Technologies. The School of Multidisciplinary Studies. Academic administration. Student Association. A preparatory program. School of Diploma Studies. Library. cafeteria.</string>
     <string name="no_desc">No description</string>
     <string name="menu">menu</string>
     <string name="could_not_take_picture">Could not take a picture</string>
