--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,6 +113,8 @@
     <string name="no_desc">No description</string>
     <string name="menu">menu</string>
     <string name="could_not_take_picture">Could not take a picture</string>
+    <string name="camera_permission_denied">Could not take a picture , camera permission denied</string>
+
 
 
 </resources>
