adding UI improvement and fixing navigation problem

--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -114,5 +114,6 @@
     <string name="menu">תפריט</string>
     <string name="could_not_take_picture">לא ניתן לצלם תמונה</string>
     <string name="camera_permission_denied">לא ניתן לצלם תמונה, גישה נדחתה</string>
+    <string name="wait_for_accuracy">אנא המתן שהדיוק ישתפר</string>
 
 </resources>
